# qencode-api-python-client

./: .gitignore  LICENSE  LICENSE.txt  LONG_DESCRIPTION.md  MANIFEST.in  Makefile  README.md  pyproject.toml  requirements.txt  setup.cfg  setup.py
.github/workflows/: qencode-ci.yml
docs/: install.md  quickstart.md  usage.md
qencode/: __init__.py  _compat.py  client.py  const.py  custom_params.py  exceptions.py  exeptions.py  httptools.py  metadata.py  task.py  tools.py  tus_uploader.py  utils.py
qencode/drm/: buydrm.py  buydrm_v4.py  const.py
qencode/drm/keys/: buydrm_qencode_public_cert.pem  qencode-public_cert.pem
sample-code/: metadata.py  query.json  start_custom_hls.py  start_custom_mp4.py  start_custom_tus_upload.py  start_custom_with_dict.py  start_custom_with_file.py  start_custom_with_json.py  start_encode.py  start_encode2.py  start_encode3.py  start_with_aws_signed_url.py  start_with_callback.py  start_with_drm.py
sample-code/drm/buydrm/: buydrm_v4.py  buydrm_widevine_playready.py  query.json
tests/: test_client.py
