[tool.black]
skip-string-normalization = true

[tool.poetry]
name = "qencode-api-python-client"
version = "1.0.0"
description = "Python bindings for the Qencode API"
authors = ["Qencode Team <team@qencode.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = ">=3.6.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry_core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
