[tool.black]
skip-string-normalization = true

[tool.poetry]
name = "qencode"
version = "1.0.0"
description = "Python bindings for the Qencode API"
authors = ["Qencode Team <team@qencode.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "~2.7 || ^3.5"

[tool.poetry.dev-dependencies]
black = {version="==19.10b0", python="^3.6"}
docutils = "*"
flake8 = "*"
isort = "<5"
pytest = [
  {version="<4.7.0", python="<3"},
  {version="*", python=">=3"}
]
pathlib2 = {version="<2.3.5", python="<3"}  # Untangle pytest peer-dependency
sphinx = [
  {version="<2", python="<3"},
  {version="*", python=">=3"}
]
twine = "*"
codecov = "*"
coverage = "*"
pytest-cov = [
  {version="<2.10.0", python="<3"},
  {version="*", python=">=3"}
]
pytest-mock = [
  {version="<3.0.0", python="<3"},
  {version="*", python=">=3"}
]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
