[tool.black]
skip-string-normalization = true

[tool.poetry]
name = "qencode-api-python-client"
version = "1.0.0"
description = "Python bindings for the Qencode API"
authors = ["Qencode Team <team@qencode.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = ">=3.6.2"

[tool.poetry.dev-dependencies]
black = {version="==21.12b0", python="^3.6"}
flake8 = "*"
isort = "*"
pytest = "*"
twine = "*"
codecov = "*"
coverage = "*"
pytest-cov = "*"
pytest-mock = "*"

[build-system]
requires = ["poetry_core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
